@@ -30,7 +30,7 @@
 #include "libavutil/version.h"
 
 #define LIBAVFILTER_VERSION_MAJOR   7
-#define LIBAVFILTER_VERSION_MINOR  63
+#define LIBAVFILTER_VERSION_MINOR  64
 #define LIBAVFILTER_VERSION_MICRO 100
 
 
